syntax="proto3";

package quote;

option go_package="./pkg/pb/quote;quote_pb_service";

service QuotePbService {
  rpc GetList(GetListRequest) returns (GetListResponse) {}
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message GetListRequest {
}

message GetListResponse {
  bytes quotes = 1;
}

message CreateRequest {
  string title = 1;
  string text = 2;
  int64 userId = 3;
}

message CreateResponse {
  bool status = 1;
  bytes quote = 2;
  string err = 3;
}

message DeleteRequest {
  int64 quoteId = 1;
  int64 userId = 2;
}

message DeleteResponse {
  bool status = 1;
  string msg = 2;
  string err = 3;
}